--- a/vk_txt_to_playlistmain/config.cfg
+++ b/vk_txt_to_playlistmain/config.cfg
@@ -1,7 +1,7 @@
 [CONFIG]
-FILE_NAME = от мужчинки до драг квинки
-USERNAME = 89588318538
-PASSWORD = ASDwqe123
+FILE_NAME = если надо просто из файла
+USERNAME = USERNAME
+PASSWORD = PASSWORD
 EXEPTWORDS = radio,edit,version,remastered,mix,short,remaster
 
 
