--- a/config.cfg
+++ b/config.cfg
@@ -4,3 +4,4 @@ USERNAME = USERNAME
 PASSWORD = PASSWORD
 EXEPTWORDS = radio,edit,version,remastered,mix,remaster
 PROXY = ip:port
+PATH_TO_CHROME_WEBDRIVER = PATH_TO_CHROME_WEBDRIVER
