--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 [CONFIG]
 FILE_NAME = ignore_it
-USERNAME = USERNAME
-PASSWORD = PASSWORD
+USERNAME = 89588318538
+PASSWORD = ASDwqe123
 EXEPTWORDS = radio,edit,version,remastered,mix,remaster
-PROXY = ip:port
-PATH_TO_CHROME_WEBDRIVER = PATH_TO_CHROME_WEBDRIVER
+PROXY = 89.43.31.134:3128
+PATH_TO_CHROME_WEBDRIVER = C:\Users\danya\Documents\chromedriver.exe
